# AutoSlowMode

./: .dockerignore  Dockerfile  README.md  bot.py  fly.toml  main.py  privacy.md  pyproject.toml  testing.py  tos.md
extensions/: admin.py  core.py  db.py  utils.py
